# advent_of_code

./: parser.py  pyproject.toml
2020/day_01/: case02.py
2020/day_02/: case02.py
2020/day_03/: case01.py  case02.py
2020/day_04/: case02.py
2021/day_01/: case01.py  case02.py
2021/day_02/: case01.py  case02.py
2021/day_03/: case01.py
day_01/: case01.py
day_02/: case01.py
day_04/: case01.py
