[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Robert Durica <r.durica@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
